--- a/Computers.html
+++ b/Computers.html
@@ -18,5 +18,7 @@
         lately with priorities changing and with the silicone shortage/Crypto-mining craze we were having i haven't
         been able build anymore.<br><br><br><br><br><br></p>
     <img class="img" src="assets\PC.png"><br />
+    <a class="home" href="index.html"><img src="assets/Home.PNG" alt="home button"></a>
+
 
 </div>
