--- a/Fishing.html
+++ b/Fishing.html
@@ -17,5 +17,7 @@
     <p> Something that my grandpa got me into was fishing. catching fish is exciting but even if i don't catch any
         it still allows me to get away and sit with my thoughts and emotions and work them out.<br><br><br><br><br><br></p>
 </div>
-    <img class="img" src="assets\Fishing.png">
+    <img class="img" src="assets\Fishing.png"><br>
+    <a class="home" href="index.html"><img src="assets/Home.PNG" alt="home button"></a>
+
     
