--- a/Photos.html
+++ b/Photos.html
@@ -12,6 +12,8 @@
 <div>
     <img class="img" src="assets\Earthship-systems.jpg"><br>
     <img class="img" src="assets\csgo.gif" alt="" width="37%"><br>
+    <img class="img" src="assets/American Fishing.png" width="50%"><br>
     <img class="img" src="assets\Desk.jpg" alt="" width="50%">
-    <img class="img" src="assets\Rainbow.jpg" width="50%"
+    <img class="img" src="assets\Rainbow.jpg" width="50%">
 </div>
+<a class="home" href="index.html"><img src="assets/Home.PNG" alt="home button"></a>
