--- a/VideoGames.html
+++ b/VideoGames.html
@@ -15,8 +15,10 @@
         <div class=Line></div>
     </div>
     <p> playing video games is largely what I do in my free time, games like CSGO, Minecraft, and Hunt-Showdown
-        (shown above).<br><br><br><br><br><br></p>
+        (shown below).<br><br><br><br><br><br></p>
     <img class="img" src="assets\Hunt.gif"><br />
+    <a class="home" href="index.html"><img src="assets/Home.PNG" alt="home button"></a>
+
     
     <div class="shape">
         <div class="head">
